--- a/Ideas/Base.lproj/Document.xib
+++ b/Ideas/Base.lproj/Document.xib
@@ -8,7 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="Document" customModule="Ideas" customModuleProvider="target">
             <connections>
-                <outlet property="attachmentsList" destination="ZW4-Iy-xRE" id="fhc-yD-bw1"/>
+                <outlet property="attachmentsList" destination="Zq5-1T-82j" id="U04-qk-Pcp"/>
                 <outlet property="window" destination="xOd-HO-29H" id="JIz-fz-R2o"/>
             </connections>
         </customObject>
@@ -23,19 +23,19 @@
             <value key="minSize" type="size" width="94" height="86"/>
             <view key="contentView" wantsLayer="YES" id="gIp-Ho-8D9">
                 <rect key="frame" x="0.0" y="0.0" width="507" height="413"/>
-                <autoresizingMask key="autoresizingMask"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxB-xo-34s">
-                        <rect key="frame" x="20" y="149" width="467" height="244"/>
+                        <rect key="frame" x="20" y="97" width="467" height="296"/>
                         <clipView key="contentView" id="CJT-ti-FtT">
-                            <rect key="frame" x="1" y="1" width="450" height="242"/>
+                            <rect key="frame" x="1" y="1" width="465" height="294"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" linkDetection="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="oqx-Qn-74t">
-                                    <rect key="frame" x="0.0" y="0.0" width="450" height="242"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="465" height="294"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="450" height="242"/>
+                                    <size key="minSize" width="465" height="294"/>
                                     <size key="maxSize" width="473" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
@@ -50,20 +50,20 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="wVB-wF-60S">
-                            <rect key="frame" x="451" y="1" width="15" height="242"/>
+                            <rect key="frame" x="450" y="1" width="16" height="294"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-1T-82j">
-                        <rect key="frame" x="20" y="20" width="399" height="111"/>
+                        <rect key="frame" x="20" y="20" width="387" height="59"/>
                         <clipView key="contentView" drawsBackground="NO" id="BHB-dD-lAo">
-                            <rect key="frame" x="1" y="1" width="397" height="109"/>
+                            <rect key="frame" x="1" y="1" width="385" height="57"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <collectionView id="ZW4-Iy-xRE">
-                                    <rect key="frame" x="0.0" y="0.0" width="397" height="109"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="385" height="57"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="uvj-1Z-Ixt">
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" scrollDirection="horizontal" id="uvj-1Z-Ixt">
                                         <size key="itemSize" width="50" height="50"/>
                                     </collectionViewFlowLayout>
                                     <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -85,10 +85,10 @@
                         </scroller>
                     </scrollView>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zK8-tf-6Kb">
-                        <rect key="frame" x="438" y="19" width="49" height="49"/>
+                        <rect key="frame" x="427" y="19" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="47" id="JZh-k8-t16"/>
-                            <constraint firstAttribute="width" constant="49" id="ebN-4X-QTj"/>
+                            <constraint firstAttribute="height" constant="58" id="E0D-ER-Kfs"/>
+                            <constraint firstAttribute="width" constant="60" id="nfc-7X-fcl"/>
                         </constraints>
                         <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="rnA-c8-nFE">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -100,16 +100,16 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="3wZ-v5-6rr"/>
-                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="9S8-Ki-MTz"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="18" id="A41-Ud-6lo"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="82" id="BGa-Rx-mRl"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="M59-rq-4Sc"/>
-                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="PqO-02-icZ"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="acO-49-ryv"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="bCB-yI-g7r"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="19" id="qNK-kl-LHp"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="zuy-uJ-jua"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="FIS-4J-LBQ"/>
+                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="LfO-dc-6yr"/>
+                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="RIJ-9u-aes"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="centerY" secondItem="zK8-tf-6Kb" secondAttribute="centerY" id="YV1-nh-cF8"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="18" id="bvR-EY-qBz"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="c2g-4U-PXf"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="gGz-7B-QfU"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="j5j-SK-ivp"/>
+                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="20" id="smj-kS-wzb"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="wCD-WU-Sla"/>
                 </constraints>
             </view>
             <connections>
