--- a/Ideas/AttachmentCell.xib
+++ b/Ideas/AttachmentCell.xib
@@ -13,37 +13,40 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="287" height="287"/>
+        <customView focusRingType="none" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="513" height="310"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ucL-M4-SQS">
-                    <rect key="frame" x="42" y="39" width="202" height="208"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="byd-dW-Fti"/>
-                </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ycn-KC-yrr">
-                    <rect key="frame" x="125" y="8" width="37" height="17"/>
+                    <rect key="frame" x="238" y="20" width="37" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="oh2-bf-KIA">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ucL-M4-SQS">
+                    <rect key="frame" x="133" y="42" width="247" height="225"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="247" id="Z0D-PL-y8G"/>
+                    </constraints>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="byd-dW-Fti"/>
+                </imageView>
             </subviews>
             <constraints>
-                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="2gq-0l-V7t"/>
-                <constraint firstItem="ucL-M4-SQS" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="40" id="DxI-MK-qIC"/>
-                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerX" secondItem="Ycn-KC-yrr" secondAttribute="centerX" id="nEd-f3-1Of"/>
-                <constraint firstItem="ucL-M4-SQS" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="42" id="pKh-F8-GhI"/>
-                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="pkL-La-LEv"/>
-                <constraint firstItem="Ycn-KC-yrr" firstAttribute="top" secondItem="ucL-M4-SQS" secondAttribute="bottom" constant="14" id="wOT-Xg-Czy"/>
+                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="IgK-na-8Ha"/>
+                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerX" secondItem="Ycn-KC-yrr" secondAttribute="centerX" id="QTb-LC-vFj"/>
+                <constraint firstAttribute="bottom" secondItem="Ycn-KC-yrr" secondAttribute="bottom" constant="20" symbolic="YES" id="dwO-UC-DBh"/>
+                <constraint firstItem="Ycn-KC-yrr" firstAttribute="top" secondItem="ucL-M4-SQS" secondAttribute="bottom" constant="5" id="psi-Cl-WlP"/>
+                <constraint firstItem="ucL-M4-SQS" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="y6k-JL-Yc5"/>
             </constraints>
-            <point key="canvasLocation" x="102.5" y="176.5"/>
+            <point key="canvasLocation" x="52.5" y="128"/>
         </customView>
-        <collectionViewItem id="RCs-2e-0Yl" customClass="AttachmentCell" customModule="Ideas" customModuleProvider="target">
+        <collectionViewItem id="RCs-2e-0Yl" userLabel="AttachmentCell" customClass="AttachmentCell" customModule="Ideas" customModuleProvider="target">
             <connections>
-                <outlet property="imageView" destination="ucL-M4-SQS" id="UHX-8w-KKw"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="mN2-fK-r43"/>
+                <outlet property="imageView" destination="ucL-M4-SQS" id="Zjc-St-tW7"/>
+                <outlet property="textField" destination="Ycn-KC-yrr" id="Ivc-mj-Lvz"/>
+                <outlet property="view" destination="Hz6-mo-xeY" id="gbt-HE-9Me"/>
             </connections>
         </collectionViewItem>
     </objects>
