--- a/Ideas/Base.lproj/Document.xib
+++ b/Ideas/Base.lproj/Document.xib
@@ -19,23 +19,23 @@
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="133" y="235" width="507" height="413"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
             <value key="minSize" type="size" width="94" height="86"/>
             <view key="contentView" wantsLayer="YES" id="gIp-Ho-8D9">
                 <rect key="frame" x="0.0" y="0.0" width="507" height="413"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxB-xo-34s">
-                        <rect key="frame" x="20" y="149" width="467" height="244"/>
+                        <rect key="frame" x="20" y="125" width="467" height="268"/>
                         <clipView key="contentView" id="CJT-ti-FtT">
-                            <rect key="frame" x="1" y="1" width="450" height="242"/>
+                            <rect key="frame" x="1" y="1" width="465" height="266"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textView importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" linkDetection="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="oqx-Qn-74t">
-                                    <rect key="frame" x="0.0" y="0.0" width="450" height="242"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="465" height="266"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="450" height="242"/>
+                                    <size key="minSize" width="465" height="266"/>
                                     <size key="maxSize" width="473" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
@@ -50,23 +50,23 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="wVB-wF-60S">
-                            <rect key="frame" x="451" y="1" width="15" height="242"/>
+                            <rect key="frame" x="450" y="1" width="16" height="266"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-1T-82j">
-                        <rect key="frame" x="20" y="20" width="399" height="111"/>
+                        <rect key="frame" x="20" y="20" width="391" height="97"/>
                         <clipView key="contentView" drawsBackground="NO" id="BHB-dD-lAo">
-                            <rect key="frame" x="1" y="1" width="397" height="109"/>
+                            <rect key="frame" x="1" y="1" width="389" height="95"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <collectionView id="ZW4-Iy-xRE">
-                                    <rect key="frame" x="0.0" y="0.0" width="397" height="109"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="389" height="95"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="uvj-1Z-Ixt">
+                                    <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" scrollDirection="horizontal" id="uvj-1Z-Ixt">
                                         <size key="itemSize" width="50" height="50"/>
                                     </collectionViewFlowLayout>
-                                    <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="primaryBackgroundColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                     <connections>
                                         <outlet property="dataSource" destination="-2" id="BDM-Nc-SZM"/>
                                         <outlet property="delegate" destination="-2" id="UcB-Ey-Lah"/>
@@ -85,10 +85,10 @@
                         </scroller>
                     </scrollView>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zK8-tf-6Kb">
-                        <rect key="frame" x="438" y="19" width="49" height="49"/>
+                        <rect key="frame" x="419" y="19" width="68" height="69"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="47" id="JZh-k8-t16"/>
-                            <constraint firstAttribute="width" constant="49" id="ebN-4X-QTj"/>
+                            <constraint firstAttribute="height" constant="67" id="MZ0-eZ-cNI"/>
+                            <constraint firstAttribute="width" constant="68" id="vXG-wT-IlA"/>
                         </constraints>
                         <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="rnA-c8-nFE">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -100,16 +100,16 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="3wZ-v5-6rr"/>
-                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="9S8-Ki-MTz"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="18" id="A41-Ud-6lo"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="82" id="BGa-Rx-mRl"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="M59-rq-4Sc"/>
-                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="PqO-02-icZ"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="acO-49-ryv"/>
-                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="bCB-yI-g7r"/>
-                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="19" id="qNK-kl-LHp"/>
-                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="zuy-uJ-jua"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="trailing" secondItem="zK8-tf-6Kb" secondAttribute="trailing" id="0c0-OW-zMv"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="top" secondItem="gIp-Ho-8D9" secondAttribute="top" constant="20" symbolic="YES" id="HAb-WF-ef8"/>
+                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="trailing" constant="8" symbolic="YES" id="IQQ-OZ-4n1"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="8" symbolic="YES" id="SXV-9h-Ji9"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="Zq5-1T-82j" secondAttribute="leading" id="T6a-vF-qXR"/>
+                    <constraint firstItem="nxB-xo-34s" firstAttribute="leading" secondItem="gIp-Ho-8D9" secondAttribute="leading" constant="20" symbolic="YES" id="VO1-LV-c3E"/>
+                    <constraint firstAttribute="trailing" secondItem="nxB-xo-34s" secondAttribute="trailing" constant="20" symbolic="YES" id="aZZ-hf-qeu"/>
+                    <constraint firstItem="zK8-tf-6Kb" firstAttribute="top" secondItem="nxB-xo-34s" secondAttribute="bottom" constant="38" id="dKx-xM-vAj"/>
+                    <constraint firstItem="Zq5-1T-82j" firstAttribute="bottom" secondItem="zK8-tf-6Kb" secondAttribute="bottom" id="g9p-1C-w5B"/>
+                    <constraint firstAttribute="bottom" secondItem="Zq5-1T-82j" secondAttribute="bottom" constant="20" symbolic="YES" id="uK1-X2-dC9"/>
                 </constraints>
             </view>
             <connections>
